--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.0",
-        "laravel/tinker": "^1.0"
+        "laravel/tinker": "^1.0",
+        "symfony/translation": "4.3.8"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
