--- a/composer.json
+++ b/composer.json
@@ -11,13 +11,17 @@
         "php": "^7.2",
         "barryvdh/laravel-cors": "^0.11.4",
         "fideloper/proxy": "^4.0",
+        "iatstuti/laravel-cascade-soft-deletes": "^2.0",
+        "kalnoy/nestedset": "^5.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "owen-it/laravel-auditing": "^9.3",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
+        "laracasts/generators": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
