--- a/composer.json
+++ b/composer.json
@@ -15,13 +15,15 @@
         "kalnoy/nestedset": "^5.0",
         "laravel/framework": "^6.0",
         "laravel/tinker": "^1.0",
+        "lavary/laravel-menu": "^1.7",
         "owen-it/laravel-auditing": "^9.3",
-        "symfony/translation": "4.3.8"
+        "spatie/laravel-permission": "^3.3"
     },
     "require-dev": {
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "laracasts/generators": "^1.1",
+        "laravel/ui": "^1.1",
         "mockery/mockery": "^1.0",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
