--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,9 @@
         "iatstuti/laravel-cascade-soft-deletes": "^2.0",
         "kalnoy/nestedset": "^5.0",
         "laravel/framework": "^6.0",
+        "laravel/passport": "^8.2",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^6.0",
         "lavary/laravel-menu": "^1.7",
         "owen-it/laravel-auditing": "^9.3",
         "spatie/laravel-permission": "^3.3"
