--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,9 @@
         "laravel"
     ],
     "license": "MIT",
+
     "require": {
+        "symfony/translation": "4.3.8",
         "php": "^7.2",
         "barryvdh/laravel-cors": "^0.11.4",
         "doctrine/dbal": "^2.10",
