--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
 
     "require": {
         "php": "^7.2",
+        "akeneo-labs/spreadsheet-parser": "^1.3",
         "barryvdh/laravel-cors": "^0.11.4",
         "barryvdh/laravel-dompdf": "^0.8.5",
         "doctrine/dbal": "^2.10",
