--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
         "guzzlehttp/guzzle": "^6.5",
         "iatstuti/laravel-cascade-soft-deletes": "^2.0",
         "kalnoy/nestedset": "^5.0",
+        "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^6.0",
         "laravel/passport": "^8.2",
         "laravel/tinker": "^1.0",
