--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,10 @@
         "lavary/laravel-menu": "^1.7",
         "owen-it/laravel-auditing": "^9.3",
         "spatie/laravel-permission": "^3.3",
+        "barryvdh/laravel-snappy": "^0.4.7",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
+        "knplabs/knp-snappy": "^1.2",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
