Se agrega evaluación de defaults para header y footer.

--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
-    "name": "laravel/laravel",
+    "name": "cfcrl/conciliacion",
     "type": "project",
-    "description": "The Laravel Framework.",
+    "description": "Sistema Nacional de Conciliación Laboral.",
     "keywords": [
         "framework",
         "laravel"
