--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,15 @@
         "akeneo-labs/spreadsheet-parser": "^1.3",
         "barryvdh/laravel-cors": "^0.11.4",
         "barryvdh/laravel-dompdf": "^0.8.5",
+        "barryvdh/laravel-snappy": "^0.4.7",
         "doctrine/dbal": "^2.10",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
+        "h4cc/wkhtmltoimage-amd64": "0.12.x",
+        "h4cc/wkhtmltopdf-amd64": "0.12.x",
         "iatstuti/laravel-cascade-soft-deletes": "^2.0",
         "kalnoy/nestedset": "^5.0",
+        "knplabs/knp-snappy": "^1.2",
         "lab404/laravel-impersonate": "^1.7",
         "laravel/framework": "^6.0",
         "laravel/passport": "^8.2",
@@ -25,11 +29,8 @@
         "laravelcollective/html": "^6.0",
         "lavary/laravel-menu": "^1.7",
         "owen-it/laravel-auditing": "^9.3",
+        "rap2hpoutre/laravel-log-viewer": "^1.7",
         "spatie/laravel-permission": "^3.3",
-        "barryvdh/laravel-snappy": "^0.4.7",
-        "h4cc/wkhtmltoimage-amd64": "0.12.x",
-        "h4cc/wkhtmltopdf-amd64": "0.12.x",
-        "knplabs/knp-snappy": "^1.2",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
@@ -38,7 +39,7 @@
         "fzaninotto/faker": "^1.4",
         "laracasts/generators": "^1.1",
         "laravel/ui": "^1.1",
-        "mockery/mockery": "1.0",
+        "mockery/mockery": "^1.4",
         "nunomaduro/collision": "^3.0",
         "phpunit/phpunit": "^8.0"
     },
