--- a/composer.json
+++ b/composer.json
@@ -32,6 +32,7 @@
         "rap2hpoutre/laravel-log-viewer": "^1.7",
         "spatie/laravel-permission": "^3.3",
         "spatie/laravel-web-tinker": "^1.7",
+        "simplesoftwareio/simple-qrcode": "^4.1",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
