--- a/composer.json
+++ b/composer.json
@@ -29,10 +29,11 @@
         "laravelcollective/html": "^6.0",
         "lavary/laravel-menu": "^1.7",
         "owen-it/laravel-auditing": "^9.3",
+        "rap2hpoutre/fast-excel": "^2.2",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
+        "simplesoftwareio/simple-qrcode": "^4.1",
         "spatie/laravel-permission": "^3.3",
         "spatie/laravel-web-tinker": "^1.7",
-        "simplesoftwareio/simple-qrcode": "^4.1",
         "symfony/translation": "4.3.8"
     },
     "require-dev": {
