--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "barryvdh/laravel-dompdf": "^0.8.5",
         "barryvdh/laravel-snappy": "^0.4.7",
         "doctrine/dbal": "^2.10",
+        "edgar-orozco/docsigner": "dev-master",
         "fideloper/proxy": "^4.0",
         "guzzlehttp/guzzle": "^6.5",
         "h4cc/wkhtmltoimage-amd64": "0.12.x",
@@ -83,5 +84,12 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ]
-    }
+    },
+
+    "repositories": [
+        {
+            "type": "path",
+            "url": "../packages/edgar-orozco/docsigner"
+        }
+    ]
 }
