--- a/composer.json
+++ b/composer.json
@@ -30,6 +30,7 @@
         "laravel/tinker": "^1.0",
         "laravelcollective/html": "^6.0",
         "lavary/laravel-menu": "^1.7",
+        "maatwebsite/excel": "^3.1",
         "owen-it/laravel-auditing": "^9.3",
         "rap2hpoutre/fast-excel": "^2.2",
         "rap2hpoutre/laravel-log-viewer": "^1.7",
