--- a/.env.example
+++ b/.env.example
@@ -1,23 +1,47 @@
-APP_NAME=Laravel
+APP_NAME=Conciliación
 APP_ENV=local
-APP_KEY=
-APP_DEBUG=true
-APP_URL=http://localhost
+APP_KEY=base64:QNzWBFbcDXlWUH4KGHKSK3BNNnMSQZuiSAcQWY+Gdw
+APP_DEBUG=false
+APP_URL=https://conciliacion.local
+
+# Esta variable si está en YES hace que no se tome el URL del servidor de notificaciones DE LA TABLA "centros" para envío por web service
+NOTIFICACION_DRY_RUN=YES
+
+# URL AL SISTEMA DE NOTIFICACIONES DRY
+APP_URL_NOTIFICACIONES=https://signo.test/api/v1/notificaciones
 
 LOG_CHANNEL=stack
 
-DB_CONNECTION=mysql
+# Configuarción de base de datos principal
+DB_CONNECTION=pgsql
 DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_PORT=5432
+DB_DATABASE=conciliacion
+DB_USERNAME=homestead
+DB_PASSWORD=secret
+
+# Configuración de conexión a base de datos para consultas dataware house, estadística y reportería.
+DBQA_CONNECTION=pgsqlqa
+#DBQA_HOST=10.68.8.19
+#DBQA_PORT=5432
+#DBQA_DATABASE=conciliacion
+#DBQA_USERNAME=eorozco
+#DBQA_PASSWORD=Mv5P@cc3L
+
+DBQA_HOST=127.0.0.1
+DBQA_PORT=5432
+DBQA_DATABASE=conciliacion
+DBQA_USERNAME=homestead
+DBQA_PASSWORD=secret
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
-SESSION_DRIVER=file
+SESSION_DRIVER=redis
+SESSION_CONNECTION=default
 SESSION_LIFETIME=120
+
+SESSION_SECURE_COOKIE=true
 
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
@@ -26,9 +50,11 @@ REDIS_PORT=6379
 MAIL_DRIVER=smtp
 MAIL_HOST=smtp.mailtrap.io
 MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_USERNAME="sfseeeaf3eaa8ef5b77e"
+MAIL_PASSWORD="932df29f4ec5cddaedge"
+MAIL_ENCRYPTION=tls
+MAIL_FROM_NAME="${APP_NAME}"
+MAIL_FROM_ADDRESS=noreply@conciliacion.centrolaboral.gob.mx
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -42,3 +68,11 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+API_KEY_MAPS="LLAVE DE GOOGLE MAPS"
+
+# URL de web services del CJF (Consejo de la Judicatura Federal)
+API_CJF="http://189.240.126.44:96/wsInterconexion/STPS/DemandaSTPSService.svc/DemandaSTPS"
+
+# Nombre de la plantilla que debe tomar el editor de Oficios libres.
+PLANTILLA_OFICIO_LIBRE_NOMBRE="OFICIO LIBRE"
